# product_service

./: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
app/: alembic.ini
app/application/api/: healthcheck.py  main.py  schemas.py
app/application/api/users/: filters.py  routers.py  schemas.py
app/domain/entities/: base.py  products.py  users.py
app/domain/events/: base.py  products.py  users.py
app/domain/exceptions/: base.py  products.py  users.py
app/domain/values/: base.py  products.py  users.py
app/infrastructure/: exception_mapper.py
app/infrastructure/exceptions/: base.py
app/infrastructure/message_brokers/: base.py  converters.py  kafka.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 2024-06-25_initial.py  2024-06-27_add_user_deleted_add_field.py  2024-06-30_16-31_add_productmodel.py  2024-06-30_18-29_add_user_is_deleted_field.py
app/infrastructure/models/: products.py  users.py
app/infrastructure/models/common/: base.py
app/infrastructure/repositories/common/: database.py  repository.py
app/infrastructure/repositories/products/: base.py
app/infrastructure/repositories/users/: base.py  converters.py  memory.py  (+2 more)
app/logic/: init.py
app/logic/commands/: base.py  groups.py  users.py
app/logic/events/: base.py  groups.py  users.py
app/logic/exceptions/: base.py  groups.py  mediator.py  users.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: base.py  groups.py  users.py
app/settings/: settings.py
docker_compose/: app.yaml  storages.yaml
(+4 files in other folders)
